src/static/kit/styles.css
/* ... */
.navbar > div {
	display: flex;
	/*flex-flow: row wrap;*/
	flex-flow: row nowrap;
}
.navbar > div > a,
.navbar a.user {
	padding: 10px;
	color: #999999;
	white-space: nowrap;
	text-decoration: none;
}
.navbar > div > a:hover,
.navbar > div > a:focus,
.navbar a.user:hover,
.navbar a.user:focus {
	color: #ffffff;
}
.navbar .brand {
	padding: 10px 20px 10px !important;
	font-size: 20px;
	color: #ffffff !important;
	text-decoration: none;
}
.navbar #clock {
	float: left;
	padding: 10px;
	color: #999999;
	white-space: nowrap;
}
.navbar .user {
	padding: 10px 15px !important;
	cursor: pointer;
}
.navbar .user > .caret {
	margin-left: 5px;
}
.navbar .dropmenu.open > ul {
	right: 0;
	margin: 5px 5px 0 0;
}
.navbar .dropmenu.open .user {
	color: #ffffff;
}
.navbar .dropmenu.open .caret,
.navbar .user:hover > .caret,
.navbar .user:focus > .caret {
	border-top-color: #ffffff;
}
.table {
	/*display: inline-table;*/
	margin: 6px auto;
	border: 1px solid #a2a2a2;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
.table td {
    padding: 4px 8px;
	text-align: left;
	vertical-align: middle;
	border-top: 1px solid #a2a2a2;
	border-left: 1px solid #a2a2a2;
}
.table th {
	padding: 7px 13px;
	line-height: 12px;
	text-align: left;
	vertical-align: middle;
	border-top: 1px solid #a2a2a2;
	border-left: 1px solid #a2a2a2;
}
.table thead tr:first-child th {
	border-top: none;
}
.table tbody tr td:first-child, .table thead tr th:first-child {
	border-left: none;
}
table.stripped > tbody > tr:nth-child(3n+1) {
	background: #eaeaea;
}
table.stripped > tbody > tr:last-child > td:first-child {
	-webkit-border-bottom-left-radius: 4px;
	-moz-border-bottom-left-radius: 4px;
	border-bottom-left-radius: 4px;
}
table.stripped > tbody > tr:last-child > td:last-child {
	-webkit-border-bottom-right-radius: 4px;
	-moz-border-bottom-right-radius: 4px;
	border-bottom-right-radius: 4px;
}

/* Menu */
.menu {
	position: fixed;
	top: 0;
	height: 100%;
	left: 0;
	display: flex;
	width: 160px;
	padding: 55px 0 0;
	margin: 0;
	background: #f5f5f5;
	border-right: 1px solid #ccc;
	-webkit-flex-flow: column nowrap;
	flex-flow: column nowrap;
}
.menu > span {
	padding: 0 7px 0 10px;
	margin-top: 5px;
	font-family: "Ubuntu Mono",Monaco,Menlo,Consolas,"Courier New",monospace;
	font-size: 12px;
	color: #555555;
}
.menu > hr {
	min-height: 1px; /* It has bo be done this way - height: 1px doesn't always work */
	max-height: 1px;
	margin: 2px 0;
	background-color: #bbb;
	border: none;
}
.menu > span:first-child {
	margin-top: 0;
}
.menu a, .menu .dropmenu.right.open > ul >  a {
	width: 160px;
	padding: 7px 10px 7px 15px;
	margin: 0;
	border: none;
	color: #1088cc;
}
.menu a:focus,
.menu a:hover,
.menu .dropmenu.right.open  > ul > a:focus,
.menu .dropmenu.right.open  > ul > a:hover {
	color: #105580;
	text-decoration: none;
	background: #e7e7e7;
}
.menu .dropmenu.right.open .dropmenu-toggle {
	background: #e7e7e7;
}
.menu .dropmenu.right > ul {
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
.menu .dropmenu.right.open > ul > a {
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
}
.menu .dropmenu.right.open > ul > a:first-child {
	-webkit-border-top-left-radius: 4px;
	-moz-border-top-left-radius: 4px;
	border-top-left-radius: 4px;
	-webkit-border-top-right-radius: 4px;
	-moz-border-top-right-radius: 4px;
	border-top-right-radius: 4px;
}
.menu .dropmenu.right.open > ul > a:last-child {
	-webkit-border-bottom-left-radius: 4px;
	-moz-border-bottom-left-radius: 4px;
	border-bottom-left-radius: 4px;
	-webkit-border-bottom-right-radius: 4px;
	-moz-border-bottom-right-radius: 4px;
	border-bottom-right-radius: 4px;
}

/* Tab menu */
.tabmenu {
	display: flex;
	flex-flow: row nowrap;
	border-bottom: 1px solid #ccc;
	margin: 8px 0;
}
.tabmenu > a {
	padding: 8px 16px;
	margin: 0 2px -1px 0;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	text-decoration: none;
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
}
.tabmenu > a.active {
	color: #333;
	background: #fff;
	border: 1px solid #ccc;
	border-bottom: 0;
	cursor: default;
}
.tabmenu > a:hover,
.tabmenu > a:focus {
	background: #f3f3f3;
	border-bottom: 1px solid #ccc;
}
.tabmenu > a.active:hover,
.tabmenu > a.active:focus {
	color: #333;
	background: #fff;
	border-bottom: 0;
}


/* Header */
div.header {
	display: flex;
	flex-flow: row wrap;
	justify-content: space-between;
	align-items: center;
}
div.header > h1 {
	white-space: nowrap;
}
div.header > div:last-child{
	margin: 8px 0;
}

/* Round info, path and view */
.round-info {
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-between;
}
.round-info > div {
	align-self: flex-end;
	margin-right: 10%;
}
.round-path {
	display: flex;
	flex-flow: row wrap;
	align-items: center;
	margin: 5px 0;
	font-size: 16px;
	line-height: 22px;
}
.round-path > a {
	margin: 0 4px;
}
.round-view {
	display: table;
	margin: 8px auto;
}
.round-view > :first-child {
	margin-bottom: -1px;
	-webkit-border-radius: 4px 4px 0 0;
	-moz-border-radius: 4px 4px 0 0;
	border-radius: 4px 4px 0 0;
}
.round-view > div {
	display: flex;
}
.round-view > div > div {
	display: flex;
	padding: 0;
	margin: 0;
	flex-grow: 1;
	-webkit-flex-direction: column;
	flex-direction: column;
}
.round-view > div > div:not(:first-child) {
	margin-left: -1px;
}
.round-view > div > div > a, .round-view > :first-child {
	display: block;
	min-width: 100px;
	padding: 5px;
	text-align: center;
	border: 1px solid #a2a2a2;
	border-top: 0px;
	white-space: nowrap;
}
.round-view > div > div > a:first-child, .round-view > :first-child {
	border: 1px solid #a2a2a2;
	border-bottom: 2px solid #a2a2a2;
	padding: 7px;
	font-weight: bold;
	line-height: 12px;
}
.round-view > div > div > a:first-child > div {
	margin: 5px;
	display: block;
	text-align: left;
	color: #000;
	font-size: 12px;
	font-weight: normal;
}
/* ... */

